unpackaged/main/default/objects/Account_Team_Default__mdt/Account_Team_Default__mdt.object-meta.xml
<CustomObject>
    <description>Org-wide default Account Team membership per Region and role. Read by the &quot;Account - On Create - Apply Default Account Team&quot; flow (DWDECI-32). No hardcoded record/user IDs: rows are matched by Region name and Users are resolved by Username at flow runtime.</description>
    <label>Account Team Default</label>
    <pluralLabel>Account Team Defaults</pluralLabel>
</CustomObject>