unpackaged/main/default/objects/Account_Team_Default__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to stop this row from being applied without deleting it.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>