unpackaged/main/default/objects/Account_Team_Default__mdt/fields/Member_Username__c.field-meta.xml
<CustomField>
    <fullName>Member_Username__c</fullName>
    <description>Username of the User to add to the Account Team for this Region/Role. Resolved to a User Id at flow runtime - no hardcoded Ids so this CMDT can move safely between orgs.</description>
    <label>Member Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>