unpackaged/main/default/objects/Account_Team_Default__mdt/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <description>Must exactly match a Region__c.Name value. The Apply Default Account Team flow matches rows against the new Account&#39;s Region.</description>
    <label>Region Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>