unpackaged/main/default/objects/Account_Team_Default__mdt/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <description>Account Team Member role to assign. Values must match AccountTeamMember.TeamMemberRole (SalesTeamRole standard value set).</description>
    <label>Team Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Partner Engagement Specialist</fullName>
            </value>
            <value>
                <fullName>Career Counselor</fullName>
            </value>
            <value>
                <fullName>Success Coach</fullName>
            </value>
            <value>
                <fullName>Partner Success Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>